Fixed overflow problem

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,38 @@
 .main {
-  min-height: 100vh;
+  background-color: var(--pure-white);
+  height: 100vh;
+}
+
+.scenesContainer {
+  position: absolute;
+  overflow: hidden;
+  height: 100vh;
+  width: 100vw;
+}
+
+.sceneContainer {
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  place-content: center;
+  position: absolute;
+  background-color: var(--pure-white);
+}
+
+.transitionContainer {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  z-index: 4;
+  display: grid;
+}
+
+/* Hero Scene */
+.heroScene {
+  overflow: hidden;
+  color: var(--pure-black);
+  background-color: var(--pure-white);
+  z-index: 3;
 }
 
 .background {
@@ -55,34 +88,10 @@
   --clip: 0;
   clip-path: circle(var(--clip) at bottom);
 }
+
 .circle .title {
   z-index: 3;
 }
-
-.sceneContainer {
-  width: 100vw;
-  height: 100vh;
-  display: grid;
-  place-content: center;
-  position: absolute;
-}
-
-.transitionContainer {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  z-index: 4;
-  display: grid;
-}
-
-.heroScene {
-  overflow: hidden;
-  color: var(--pure-black);
-  background-color: var(--pure-white);
-  z-index: 3;
-}
-
-/* Phones */
 
 .displayPhoneContainer {
   position: absolute;
